force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Action_Window_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Action_Window_Type__c</fullName>
    <description>Determine how Adobe Sign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Determine how Adobe Sign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</inlineHelpText>
    <label>Action Window Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>