force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Adobe_Sign_OAuth_Scope__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Adobe_Sign_OAuth_Scope__c</fullName>
    <description>OAuth scope value</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>OAuth scope value</inlineHelpText>
    <label>Adobe Sign OAuth Scope</label>
    <length>16</length>
    <type>Text</type>
</CustomField>