force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Agreement_Document_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Document_Storage_Type__c</fullName>
    <description>Set to Files to make the package work with the latest generation Salesforce files based system. Set to Attachments to use the legacy storage object type. If left blank, will default to a method based on the version.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set to Files to make the package work with the latest generation Salesforce files based system. Set to Attachments to use the legacy storage object type. If left blank, will default to a method based on the version.</inlineHelpText>
    <label>Agreement Document Storage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>