force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Callback_URL_Agreement_Notification__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Callback_URL_Agreement_Notification__c</fullName>
    <description>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up for push agreement feature. Follow instructions in the installation and configuration guide.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up for push agreement feature. Follow instructions in the installation and configuration guide.</inlineHelpText>
    <label>Callback URL Agreement Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>