force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Web_Identity__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Web_Identity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated</description>
    <inlineHelpText>Enable this setting to hide the Web Identity option for agreements.  Web Identity verification requires signers to verify their identity by signing in to one of the following sites: Facebook, Google, LinkedIn, Twitter, Yahoo! or Microsoft Live.)</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>