force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Recipient_Security_Options__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Recipient_Security_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, KBA)</description>
    <inlineHelpText>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, social identity, KBA)</inlineHelpText>
    <label>Enable Per Signer Identity Verification</label>
    <type>Checkbox</type>
</CustomField>