force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Override_Recipient_Field_List__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Override_Recipient_Field_List__c</fullName>
    <description>This setting will override the list of recipients in an agreement. Specify the full API name of the fields on the agreement record where recipients should be read from, in order and separated by commas. (e.g. SignerA_Email__c, SignerB_Email__c)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This setting will override the list of recipients in an agreement. Specify the full API name of the fields on the agreement record where recipients should be read from, in order and separated by commas. (e.g. SignerA_Email__c, SignerB_Email__c)</inlineHelpText>
    <label>Override Recipient Field List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>