force-app/main/default/src/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Rename_Agreement_Attachment__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Rename_Agreement_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rename the agreement using the name of the added document or the attached file</description>
    <inlineHelpText>Rename the agreement using the name of the attached document</inlineHelpText>
    <label>Rename Agreement with Document Name</label>
    <type>Checkbox</type>
</CustomField>